--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>BIG MOJI</title>
 </head>
 <body>
-  <h1 class="resizable-text">こんにちは</h1>
+  <div>
+    <h1 class="resizable-text">こんにちはこんにちはこんにちは</h1>
+  </div>
 </body>
 </html>
