--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
   <header>
     <h1>BIG Moji</h1>
   </header>
-  <form id="form" action="/" method="GET">
+  <form id="form" action="./" method="GET">
     <label>
       文字を入力してください
       <input type="text" name="text" required value="指定した文字列を大きく表示します" />
