open in new tab

--- a/form.html
+++ b/form.html
@@ -10,19 +10,17 @@
   <header>
     <h1>BIG Moji</h1>
   </header>
-  <form id="form" action="./" method="GET">
+  <form id="form" action="./" method="GET" target="_blank">
     <label>
       文字を入力してください
       <input type="text" name="text" required value="指定した文字列を大きく表示します" />
     </label>
-
     <label>
       marquee表示
       <input type="checkbox" name="marquee" value="true" />
     </label>
-
     <footer>
-      <button type="submit">送信</button>
+      <button type="submit">表示</button>
     </footer>
   </form>
   <footer>
