change font color

--- a/form.html
+++ b/form.html
@@ -19,6 +19,14 @@
       marquee表示
       <input type="checkbox" name="marquee" value="true" />
     </label>
+    <label>
+      文字色
+      <input type="color" name="fontcolor" value="#000000" />
+    </label>
+    <label>
+      背景色
+      <input type="color" name="backgroundcolor" value="#ffffff" />
+    </label>
     <footer>
       <button type="submit">表示</button>
     </footer>
